--- a/acrea_backend/package.json
+++ b/acrea_backend/package.json
@@ -8,11 +8,9 @@
   "author": "Aakash Thakur",
   "license": "ISC",
   "description": "",
-  "devDependencies": {
-    "nodemon": "^3.1.4"
-  },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "mongoose": "^8.6.1"
   }
 }
