--- a/acrea/package.json
+++ b/acrea/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
