--- a/acrea/package.json
+++ b/acrea/package.json
@@ -17,12 +17,14 @@
     "@reduxjs/toolkit": "^2.2.7",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
