--- a/acrea/package.json
+++ b/acrea/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.1.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "formik": "^2.4.6",
