--- a/acrea_backend/package.json
+++ b/acrea_backend/package.json
@@ -16,6 +16,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
+    "razorpay": "^2.9.5",
     "redis": "^4.7.0"
   }
 }
