--- a/acrea/package.json
+++ b/acrea/package.json
@@ -30,6 +30,7 @@
     "react-toastify": "^10.0.5",
     "recharts": "^2.15.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
